fixed bug footer not showing

--- a/style.css
+++ b/style.css
@@ -130,12 +130,13 @@ button:hover {
 
 
 .footer {
-    background-color: black;
+    background-color: wheat;
     height: 60px;
     gap: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 10px;
 }
 
 #gitLink:hover {
@@ -144,5 +145,5 @@ button:hover {
 
 
 .footerPara {
-    color: aliceblue;
+    color: black;
 }
